ffirst try with the facebook of polilibro2, create tabs, set image for the fb, give some style to tabs

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,6 +48,19 @@ hr{
 }
 /*******************************************************/
 
+
+/*********************** Tab ************************/
+.tab{
+  height: 100px;
+}
+.tab-text{
+  color: #ededee; /*073b4c*/
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  transform: rotate(90deg);
+}
+/****************************************************/
+
 /*******************Welcome page***********************/
 .content-text {
   color: #011f3f; /*120136 062743 071e3d 0c084c 222831 010a43*/
@@ -70,3 +83,23 @@ hr{
   padding: 5px;
 }
 /******************************************************/
+
+/**************General*********************************/
+.big-img{
+  height: auto;
+  width: 40%;
+}
+/******************************************************/
+
+/**************+COLORS***********/
+.blue-bg{
+  background: #41b9e3;
+}
+
+.red-bg {
+  background: #de4c3c;
+}
+
+.yellow-bg{
+  background: #ecb146;
+}
