--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,7 +15,7 @@ hr{
   background-color:darkseagreen;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  /*height: 100vh;*/
 }
 
 /*********************** Header ************************/
@@ -49,6 +49,10 @@ hr{
   font-weight: 300;
   padding: 10px;
   text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .footer-para{
@@ -76,6 +80,10 @@ hr{
   padding: 10px;
   margin: 10px auto 5px;
   text-align: center;
+}
+.card-button:hover{
+  cursor: pointer;
+  box-shadow: 0 2px 10px #073b4c; /*035aa6*/
 }
 
 .content-text {
