--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,7 +15,7 @@ hr{
   background-color:darkseagreen;
   display: flex;
   flex-direction: column;
-  /*height: 100vh;*/
+  min-height: 100vh;
 }
 
 /*********************** Header ************************/
@@ -49,10 +49,7 @@ hr{
   font-weight: 300;
   padding: 10px;
   text-align: center;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  margin-top: auto;
 }
 
 .footer-para{
