setfont family for entire body, center welcoe image, add css class for space

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: #f6f6f6; /*f6f6f6 fffafa fcf9f4 f6f5f5 eeeeee*/
+  font-family: "Spartan", sans-serif;
 }
 
 hr{
@@ -75,7 +76,7 @@ hr{
   border-radius: 7px;
   box-shadow: 0 2px 7px #073b4c; /*035aa6*/
   padding: 10px;
-  margin: 10px auto 5px;
+  margin: 10px auto;
   text-align: center;
 }
 .card-button:hover{
@@ -85,7 +86,6 @@ hr{
 
 .content-text {
   color: #011f3f; /*120136 062743 071e3d 0c084c 222831 010a43*/
-  font-family: "Spartan", sans-serif;
   font-size: 18px;
   /*font-family: 'Darker Grotesque', sans-serif;
   font-size: 22px;
@@ -93,7 +93,7 @@ hr{
 }
 
 .enter-card {
-  width: 150px;
+  width: 160px;
   float: right;
   margin-right: 2rem;
 }
@@ -112,13 +112,18 @@ hr{
 /******************************************************/
 
 /**************General*********************************/
-.big-img{
+.full-img{
   height: auto;
-  width: 40%;
+  width: 100%;
 }
 
 .icon {
   margin: 0 10px;
+}
+
+.m-v-space {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 /******************************************************/
 
