--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -59,6 +59,12 @@ hr {
 /*******************************************************/
 
 /*********************** Facebook ************************/
+.back-card {
+  width: 250px;
+  float: left;
+  margin-right: 2rem;
+}
+
 .big-img {
   max-width: 100%;
   max-height: 100%;
