fit links in sources, add emthod content

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -135,6 +135,7 @@ hr {
   box-shadow: 0 2px 7px #073b4c; /*035aa6*/
   padding: 2rem;
   width: 100%;
+  overflow-wrap: break-word ;
 }
 
 .justify-text{
