--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -165,6 +165,10 @@ hr {
   font-size: 13px;
 }
 
+.inline {
+  display: inline;
+}
+
 .justify-text{
   text-align: justify;
 }
@@ -199,6 +203,10 @@ ol.upper-letter{
 /**************+COLORS***********/
 .light-blue-bg {
   background: #41b9e3;
+}
+
+.green {
+  color: green;
 }
 
 .red-bg {
