--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,9 +25,12 @@ hr {
 
 /*********************** Header ************************/
 .header {
-  margin-bottom: 20px;
+  padding-bottom: 1em;
+  margin-bottom: 2em;
   overflow: hidden;
+  border-bottom: 1px solid rgba(210, 194, 210, 0.2);
 }
+
 .responsiveLogo {
   height: auto;
   max-width: 80px;
@@ -61,26 +64,6 @@ hr {
   margin: 1px;
 }
 /*******************************************************/
-
-/*********************** Navbar ************************/
-/*Override navbar color*/
-.navbar {
-  background-color: #b673de !important;
-}
-
-.dropdown-toggle {
-  color: white;
-}
-
-.dropdown-toggle:hover {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.7);
-}
-
-/****************************************************/
 
 /*******************Welcome page***********************/
 .card-button {
