fixed side menu on alll views and added levels

--- a/src/components/SideMenu/styles.css
+++ b/src/components/SideMenu/styles.css
@@ -1,8 +1,8 @@
 .sideMenuContainer {
   position: -webkit-sticky;
   position: sticky;
+  height: 100vh;
   top: -1px;
-  height: auto;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
