--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,6 +24,7 @@ hr {
 
 .flexContainer {
   display: flex;
+  align-items: flex-start;
 }
 
 /*********************** Header ************************/
