Adding themes to side menu, added topics of unit 1, testing blue colors on side menu

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -230,6 +230,10 @@ ol.upper-letter {
   background: #41b9e3;
 }
 
+.light-navy-bg {
+  background: #0f52ba;
+}
+
 .red-bg {
   background: #de4c3c;
 }
