--- a/src/components/SideMenu/styles.css
+++ b/src/components/SideMenu/styles.css
@@ -46,12 +46,6 @@
   cursor: pointer;
 }
 
-/*.itemContainer:hover {
-  background-color: #d5bde3;
-  color: #584e5e;
-  transition: background-color 0.3s ease;
-}*/
-
 a:hover {
   text-decoration: none;
 }
@@ -59,11 +53,6 @@ a:hover {
 .activeItem {
   border-right: 5px solid white;
 }
-
-/*.activeItem .itemContainer {
-  background-color: #d5bde3;
-  color: #584e5e !important;
-}*/
 
 /*------------------ Sidemenu colors ----------------------*/
 
@@ -78,13 +67,13 @@ a:hover {
 }
 
 .blue {
-  background-color: #5c7aea;
-  border-right: 1px solid #5c7aea;
+  background-color: #6886c5;
+  border-right: 1px solid #6886c5;
 }
 
 .blueHover:hover {
   cursor: pointer;
-  color: #90aacb;
+  color: #d7e9f7;
 }
 
 .aquaHover:hover {
@@ -98,18 +87,17 @@ a:hover {
   transition: background-color 0.3s ease;
 }
 
-.itemActivePurple {
+.itemActive .itemActivePurple {
   background-color: #d5bde3;
   color: #584e5e !important;
 }
 
 .itemBlueHover:hover {
-  background-color: #90aacb;
+  background-color: #d7e9f7;
   color: #11324d;
   transition: background-color 0.3s ease;
 }
-.itemActiveBlue {
-  background-color: #90aacb;
+.activeItem .itemActiveBlue {
+  background-color: #d7e9f7;
   color: #11324d !important;
 }
-/*${colorClass} ${hoverClass} */
