fixed class of side menu, added inicio y cierre to unit 1, added images to 1.4

--- a/src/components/SideMenu/styles.css
+++ b/src/components/SideMenu/styles.css
@@ -87,7 +87,7 @@ a:hover {
   transition: background-color 0.3s ease;
 }
 
-.itemActive .itemActivePurple {
+.activeItem .itemActivePurple {
   background-color: #d5bde3;
   color: #584e5e !important;
 }
