changed blue of cierre in unit two

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -197,11 +197,11 @@ ol.upper-letter {
 }
 
 .navy {
-  color: navy;
+  color: #11324d;
 }
 
 .light-navy {
-  color: #0f52ba;
+  color: #6886c5;
 }
 
 .dark-blue {
