--- a/src/components/HomeSideMenu/styles.css
+++ b/src/components/HomeSideMenu/styles.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   background-color: #316b83;
-  border-right: 1px solid #b673de;
+  border-right: 1px solid #316b83;
 }
 
 .sideMenuMobileContainer {
@@ -44,12 +44,12 @@ a:hover {
 }
 
 .activeItem {
-  background-color: #d5bde3;
+  background-color: #082032;
   border-right: 5px solid white;
 }
 
 .activeItem .itemContainer {
-  color: #584e5e !important;
+  color: white !important;
 }
 
 /*------  Burger button ---------------*/
@@ -62,7 +62,7 @@ a:hover {
   width: 3em;
   height: 3em;
   padding: 0.5em;
-  background-color: #b673de;
+  background-color: #316b83;
   color: white;
   border-radius: 10px;
   margin: 2em 0 2em 1em;
@@ -70,5 +70,5 @@ a:hover {
 
 .burguerIcon:hover {
   cursor: pointer;
-  color: #d5bde3;
+  color: white;
 }
