--- a/src/components/SideMenu/styles.css
+++ b/src/components/SideMenu/styles.css
@@ -13,13 +13,18 @@
   z-index: 5;
 }
 
-.chevronContainer {
+.iconsContainer {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   cursor: pointer;
 }
 
-.chevronLeft {
+.homeIcon {
+  margin: 0.6em 0 0 0.5em;
+  color: white;
+}
+
+.crossIcon {
   margin: 0.6em 1em;
   color: white;
 }
