--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -199,6 +199,13 @@ ol.upper-letter {
   margin: 2em 0;
 }
 
+.razones-img {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: auto;
+  max-width: 100%;
+}
+
 /******************************************************/
 
 /**************+COLORS***********/
@@ -268,8 +275,4 @@ ol.upper-letter {
 
 .white-bg {
   background-color: #fafafa;
-}
-
-.grey-font {
-  color: grey;
 }
