--- a/src/components/SideMenu/styles.css
+++ b/src/components/SideMenu/styles.css
@@ -6,11 +6,13 @@
   overflow-y: auto;
   display: flex;
   flex-direction: column;
+  width: 40%;
 }
 
 .sideMenuMobileContainer {
   position: fixed !important;
   z-index: 5;
+  width: 100%;
 }
 
 .iconsContainer {
