--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -206,6 +206,9 @@ ol.upper-letter {
   max-width: 100%;
 }
 
+mjx-container > svg {
+  width: auto;
+}
 /******************************************************/
 
 /**************+COLORS***********/
