--- a/src/components/SideMenu/styles.css
+++ b/src/components/SideMenu/styles.css
@@ -93,7 +93,7 @@ a:hover {
 }
 
 .pink-bg {
-  background-color: #e5707e; /* #ea97ad #e5707e; */
+  background-color: #e5707e;
   border-right: 1px solid #d4857f;
 }
 
