--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -206,8 +206,19 @@ ol.upper-letter {
   max-width: 100%;
 }
 
-mjx-container > svg {
-  width: auto;
+/****** Table *****/
+.table th {
+  vertical-align: middle;
+  text-align: center;
+}
+
+.center-table-rows .table td {
+  vertical-align: middle;
+  text-align: center;
+}
+
+.vertical-align-rows .table td {
+  vertical-align: middle;
 }
 /******************************************************/
 
