minor fixes: rename 4 unit wrong title, removed hover from burguer button, replace upper case for lower case upper case for lower case, replacing image tables for html tables

--- a/src/components/SideMenu/styles.css
+++ b/src/components/SideMenu/styles.css
@@ -46,6 +46,10 @@
   margin: 2em 0 2em 1em;
 }
 
+.burguerIcon:hover {
+  color: white !important;
+}
+
 /*------------------Item----------------------*/
 .itemContainer {
   padding: 1em 0.5em 1em 2em;
