--- a/src/components/SideMenu/styles.css
+++ b/src/components/SideMenu/styles.css
@@ -67,7 +67,7 @@ a:hover {
 
 /*------------------ Sidemenu colors ----------------------*/
 .aqua-bg {
-  background-color: #38a3a5;
+  background-color: #38a3a5 !important;
   border-right: 1px solid #38a3a5;
 }
 
@@ -77,7 +77,7 @@ a:hover {
 }
 
 .blue-bg {
-  background-color: #6886c5;
+  background-color: #6886c5 !important;
   border-right: 1px solid #6886c5;
 }
 
@@ -87,7 +87,7 @@ a:hover {
 }
 
 .purple-bg {
-  background-color: #b673de;
+  background-color: #b673de !important;
   border-right: 1px solid #b673de;
 }
 
@@ -97,7 +97,7 @@ a:hover {
 }
 
 .pink-bg {
-  background-color: #e5707e;
+  background-color: #e5707e !important;
   border-right: 1px solid #d4857f;
 }
 
@@ -107,7 +107,7 @@ a:hover {
 }
 
 .orange-bg {
-  background-color: #e4734f; /* #c64756 #4aa96c #519259 #3a9679*/
+  background-color: #e4734f !important; /* #c64756 #4aa96c #519259 #3a9679*/
   border-right: 1px solid #e4734f;
 }
 
