--- a/src/components/SideMenu/styles.css
+++ b/src/components/SideMenu/styles.css
@@ -6,7 +6,7 @@
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  width: 45%;
+  width: 45% !important;
 }
 
 .sideMenuMobileContainer {
