Adding fixes on ALL UNITS, added missing images, fixed alt descriptions, added missing center text to header, added unit names to header, added cierre and intro to some units

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -28,6 +28,9 @@
   max-width: 120px;
   width: 110%;
 }
+.wrap-text {
+  white-space: normal;
+}
 
 @media (min-width: 550px) {
   .header-title-container {
